--- a/Foresome/Foresome/AfterLogin/UserProfile/Header/ProfileHeader.xib
+++ b/Foresome/Foresome/AfterLogin/UserProfile/Header/ProfileHeader.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -26,7 +27,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="533" height="199"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="a27-Lb-23U">
-                    <rect key="frame" x="24" y="88.666666666666671" width="99" height="60.333333333333329"/>
+                    <rect key="frame" x="24" y="122.66666666666667" width="99" height="60.333333333333329"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HELLO, GEORGE!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4O-Tr-u4R">
                             <rect key="frame" x="0.0" y="0.0" width="99" height="18.333333333333332"/>
@@ -43,7 +44,7 @@
                     </subviews>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8gq-yt-cTm">
-                    <rect key="frame" x="477" y="112" width="32" height="32"/>
+                    <rect key="frame" x="477" y="146" width="32" height="32"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" image="ic_notification_active"/>
                     <connections>
@@ -51,17 +52,18 @@
                     </connections>
                 </button>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <viewLayoutGuide key="safeArea" id="6ts-8Y-EHk"/>
+            <color key="backgroundColor" systemColor="systemRedColor"/>
             <constraints>
                 <constraint firstItem="8gq-yt-cTm" firstAttribute="centerY" secondItem="ElD-UW-dzu" secondAttribute="centerY" id="0hG-G4-Xd2"/>
                 <constraint firstAttribute="trailing" secondItem="lAy-wz-SC8" secondAttribute="trailing" id="4YB-EB-vIO"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="8gq-yt-cTm" secondAttribute="trailing" constant="24" id="BMy-dL-T5V"/>
-                <constraint firstItem="a27-Lb-23U" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="IUC-x2-Ibb"/>
+                <constraint firstAttribute="trailing" secondItem="8gq-yt-cTm" secondAttribute="trailing" constant="24" id="BMy-dL-T5V"/>
+                <constraint firstItem="a27-Lb-23U" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="IUC-x2-Ibb"/>
                 <constraint firstItem="lAy-wz-SC8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="L3r-gR-Y8p"/>
                 <constraint firstItem="8gq-yt-cTm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="a27-Lb-23U" secondAttribute="trailing" constant="30" id="OXl-Ev-xQO"/>
                 <constraint firstItem="lAy-wz-SC8" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottom" id="n2q-Pd-9cd"/>
                 <constraint firstItem="lAy-wz-SC8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="oae-vW-zsn"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="a27-Lb-23U" secondAttribute="bottom" constant="16" id="pby-Rx-Qyn"/>
+                <constraint firstAttribute="bottom" secondItem="a27-Lb-23U" secondAttribute="bottom" constant="16" id="pby-Rx-Qyn"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -75,5 +77,8 @@
     <resources>
         <image name="ic_notification_active" width="32" height="32"/>
         <image name="img_1" width="375" height="224"/>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
