fix user name space issue and profile upload

--- a/Foresome/Foresome/Tournament/View/TestTableHeader.xib
+++ b/Foresome/Foresome/Tournament/View/TestTableHeader.xib
@@ -23,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="390" height="285"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_1" translatesAutoresizingMaskIntoConstraints="NO" id="nCF-oJ-gTM">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_1" translatesAutoresizingMaskIntoConstraints="NO" id="nCF-oJ-gTM">
                     <rect key="frame" x="0.0" y="0.0" width="390" height="269"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="QoL-va-qwq">
