--- a/Foresome/Foresome/AfterLogin/CreatePost/View/CreatePostViewController.xib
+++ b/Foresome/Foresome/AfterLogin/CreatePost/View/CreatePostViewController.xib
@@ -27,9 +27,11 @@
                 <outlet property="pollBtn" destination="HLO-rh-cqq" id="Gw0-fh-Yxa"/>
                 <outlet property="profileImage" destination="zSq-L8-ffN" id="C1K-bs-tKW"/>
                 <outlet property="publishBottomConstraint" destination="GYE-5P-YIc" id="PQJ-h3-fme"/>
+                <outlet property="publishButton" destination="vcD-rj-7hm" id="5cT-zt-Pv0"/>
                 <outlet property="selectImageCollection" destination="QF7-ct-zwc" id="ne3-xn-4Za"/>
                 <outlet property="userNameLbl" destination="tOr-6Q-13e" id="ZiP-0g-AE1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="writePost" destination="RJb-jO-Sa7" id="K3F-Eu-WST"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -38,13 +40,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MZh-td-7Fe">
-                    <rect key="frame" x="0.0" y="59" width="393" height="41"/>
+                    <rect key="frame" x="0.0" y="75" width="393" height="63"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rY4-Dr-Ea9">
-                            <rect key="frame" x="15" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="15" y="16" width="30" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="40" id="643-nS-m0W"/>
-                                <constraint firstAttribute="width" constant="40" id="Gr8-l0-fMy"/>
+                                <constraint firstAttribute="height" constant="30" id="643-nS-m0W"/>
+                                <constraint firstAttribute="width" constant="30" id="Gr8-l0-fMy"/>
                             </constraints>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="ic_back_black"/>
@@ -53,14 +55,14 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iio-r2-hZ9">
-                            <rect key="frame" x="0.0" y="40" width="393" height="1"/>
+                            <rect key="frame" x="0.0" y="62" width="393" height="1"/>
                             <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="68J-16-qB0"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Post" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2iT-aI-D3t">
-                            <rect key="frame" x="65" y="8.6666666666666732" width="278" height="22.666666666666671"/>
+                            <rect key="frame" x="55" y="19.666666666666671" width="288" height="22.666666666666671"/>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="16"/>
                             <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -69,10 +71,10 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="rY4-Dr-Ea9" firstAttribute="leading" secondItem="MZh-td-7Fe" secondAttribute="leading" constant="15" id="1Q6-lV-me9"/>
-                        <constraint firstItem="rY4-Dr-Ea9" firstAttribute="top" secondItem="MZh-td-7Fe" secondAttribute="top" id="8bJ-Tv-waG"/>
+                        <constraint firstItem="rY4-Dr-Ea9" firstAttribute="top" secondItem="MZh-td-7Fe" secondAttribute="top" constant="16" id="8bJ-Tv-waG"/>
                         <constraint firstItem="2iT-aI-D3t" firstAttribute="centerY" secondItem="rY4-Dr-Ea9" secondAttribute="centerY" id="H3a-F6-SO4"/>
                         <constraint firstAttribute="trailing" secondItem="2iT-aI-D3t" secondAttribute="trailing" constant="50" id="LpO-xB-se0"/>
-                        <constraint firstItem="Iio-r2-hZ9" firstAttribute="top" secondItem="rY4-Dr-Ea9" secondAttribute="bottom" id="RQ8-ht-8Ip"/>
+                        <constraint firstItem="Iio-r2-hZ9" firstAttribute="top" secondItem="rY4-Dr-Ea9" secondAttribute="bottom" constant="16" id="RQ8-ht-8Ip"/>
                         <constraint firstAttribute="bottom" secondItem="Iio-r2-hZ9" secondAttribute="bottom" id="UAg-IM-9bD"/>
                         <constraint firstItem="Iio-r2-hZ9" firstAttribute="leading" secondItem="MZh-td-7Fe" secondAttribute="leading" id="f43-Wo-Bwy"/>
                         <constraint firstItem="2iT-aI-D3t" firstAttribute="leading" secondItem="rY4-Dr-Ea9" secondAttribute="trailing" constant="10" id="iff-6Y-Xsh"/>
@@ -80,7 +82,7 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="nC3-fx-UhK">
-                    <rect key="frame" x="24" y="116" width="349" height="40"/>
+                    <rect key="frame" x="24" y="154" width="345" height="40"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="zSq-L8-ffN">
                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -96,7 +98,7 @@
                             </userDefinedRuntimeAttributes>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="George Clayton" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOr-6Q-13e">
-                            <rect key="frame" x="56" y="0.0" width="293" height="40"/>
+                            <rect key="frame" x="56" y="0.0" width="289" height="40"/>
                             <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="16"/>
                             <color key="textColor" red="0.1333333333" green="0.15686274510000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -104,8 +106,9 @@
                     </subviews>
                 </stackView>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RJb-jO-Sa7" customClass="GrowingTextView" customModule="Foresome" customModuleProvider="target">
-                    <rect key="frame" x="24" y="180" width="349" height="43"/>
+                    <rect key="frame" x="24" y="218" width="345" height="30"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="textColor" systemColor="labelColor"/>
                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="18"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -120,7 +123,7 @@
                     </userDefinedRuntimeAttributes>
                 </textView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="QF7-ct-zwc">
-                    <rect key="frame" x="24" y="263" width="349" height="120"/>
+                    <rect key="frame" x="24" y="288" width="345" height="120"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="120" id="RHW-25-HyQ"/>
@@ -133,10 +136,10 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2fn-EM-Q9s">
-                    <rect key="frame" x="0.0" y="723" width="393" height="75"/>
+                    <rect key="frame" x="0.0" y="728" width="393" height="70"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="5Oh-nw-6GG">
-                            <rect key="frame" x="24" y="24.666666666666629" width="120" height="24"/>
+                            <rect key="frame" x="24" y="23.666666666666629" width="120" height="24"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNt-lT-Nyy">
                                     <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
@@ -183,7 +186,7 @@
                             </constraints>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vcD-rj-7hm">
-                            <rect key="frame" x="309" y="19" width="60" height="35"/>
+                            <rect key="frame" x="309" y="18" width="60" height="35"/>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="16"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" title="Publish">
@@ -194,7 +197,7 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WaU-8d-k4Q">
-                            <rect key="frame" x="0.0" y="2" width="393" height="1"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="1"/>
                             <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="wbz-AY-K5A"/>
@@ -204,10 +207,10 @@
                     <constraints>
                         <constraint firstItem="5Oh-nw-6GG" firstAttribute="leading" secondItem="2fn-EM-Q9s" secondAttribute="leading" constant="24" id="6LJ-9v-Aes"/>
                         <constraint firstAttribute="trailing" secondItem="vcD-rj-7hm" secondAttribute="trailing" constant="24" id="AO0-aK-DiQ"/>
-                        <constraint firstAttribute="bottom" secondItem="vcD-rj-7hm" secondAttribute="bottom" constant="21" id="DPc-K8-jgw"/>
-                        <constraint firstItem="WaU-8d-k4Q" firstAttribute="top" secondItem="2fn-EM-Q9s" secondAttribute="top" constant="2" id="Foy-D3-5Y1"/>
+                        <constraint firstAttribute="bottom" secondItem="vcD-rj-7hm" secondAttribute="bottom" constant="17" id="DPc-K8-jgw"/>
+                        <constraint firstItem="WaU-8d-k4Q" firstAttribute="top" secondItem="2fn-EM-Q9s" secondAttribute="top" id="Foy-D3-5Y1"/>
                         <constraint firstItem="WaU-8d-k4Q" firstAttribute="leading" secondItem="2fn-EM-Q9s" secondAttribute="leading" id="JW2-SL-wWz"/>
-                        <constraint firstItem="vcD-rj-7hm" firstAttribute="top" secondItem="WaU-8d-k4Q" secondAttribute="bottom" constant="16" id="Ygh-j9-TVg"/>
+                        <constraint firstItem="vcD-rj-7hm" firstAttribute="top" secondItem="WaU-8d-k4Q" secondAttribute="bottom" constant="17" id="Ygh-j9-TVg"/>
                         <constraint firstItem="5Oh-nw-6GG" firstAttribute="centerY" secondItem="vcD-rj-7hm" secondAttribute="centerY" id="ZNE-nt-3wr"/>
                         <constraint firstAttribute="trailing" secondItem="WaU-8d-k4Q" secondAttribute="trailing" id="g0W-YU-BbR"/>
                     </constraints>
@@ -218,22 +221,20 @@
             <constraints>
                 <constraint firstItem="RJb-jO-Sa7" firstAttribute="leading" secondItem="nC3-fx-UhK" secondAttribute="leading" id="0Cw-yz-qmX"/>
                 <constraint firstItem="2fn-EM-Q9s" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="6gi-iV-feS"/>
-                <constraint firstItem="MZh-td-7Fe" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="95e-5P-Qhx"/>
-                <constraint firstItem="2fn-EM-Q9s" firstAttribute="top" secondItem="QF7-ct-zwc" secondAttribute="bottom" constant="340" id="CAv-bk-aSY"/>
+                <constraint firstItem="MZh-td-7Fe" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="95e-5P-Qhx"/>
+                <constraint firstItem="2fn-EM-Q9s" firstAttribute="top" relation="greaterThanOrEqual" secondItem="QF7-ct-zwc" secondAttribute="bottom" constant="30" id="CAv-bk-aSY"/>
                 <constraint firstItem="nC3-fx-UhK" firstAttribute="top" secondItem="MZh-td-7Fe" secondAttribute="bottom" constant="16" id="Cuz-KT-a88"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2fn-EM-Q9s" secondAttribute="bottom" constant="20" id="GYE-5P-YIc"/>
-                <constraint firstItem="2fn-EM-Q9s" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="GmE-Jx-Swa"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nC3-fx-UhK" secondAttribute="trailing" constant="20" id="HI6-DH-CRT"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2fn-EM-Q9s" secondAttribute="trailing" id="Jg7-XW-bcU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nC3-fx-UhK" secondAttribute="trailing" constant="24" id="HI6-DH-CRT"/>
                 <constraint firstItem="QF7-ct-zwc" firstAttribute="leading" secondItem="RJb-jO-Sa7" secondAttribute="leading" id="SWD-mq-5CV"/>
                 <constraint firstItem="MZh-td-7Fe" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="WIz-Cm-1RC"/>
                 <constraint firstItem="QF7-ct-zwc" firstAttribute="trailing" secondItem="RJb-jO-Sa7" secondAttribute="trailing" id="YvM-zm-MiI"/>
                 <constraint firstItem="MZh-td-7Fe" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cZG-ME-mIG"/>
                 <constraint firstItem="RJb-jO-Sa7" firstAttribute="trailing" secondItem="nC3-fx-UhK" secondAttribute="trailing" id="eUJ-eA-zoc"/>
                 <constraint firstItem="nC3-fx-UhK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="gmc-v8-F1I"/>
-                <constraint firstItem="RJb-jO-Sa7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="nC3-fx-UhK" secondAttribute="bottom" constant="24" id="iRP-L1-bYC"/>
+                <constraint firstItem="RJb-jO-Sa7" firstAttribute="top" secondItem="nC3-fx-UhK" secondAttribute="bottom" constant="24" id="iRP-L1-bYC"/>
                 <constraint firstItem="2fn-EM-Q9s" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="vDu-RF-SkL"/>
-                <constraint firstItem="QF7-ct-zwc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="RJb-jO-Sa7" secondAttribute="bottom" constant="40" id="x6o-PC-MAp"/>
+                <constraint firstItem="QF7-ct-zwc" firstAttribute="top" secondItem="RJb-jO-Sa7" secondAttribute="bottom" constant="40" id="x6o-PC-MAp"/>
             </constraints>
             <point key="canvasLocation" x="139.69465648854961" y="20.422535211267608"/>
         </view>
