--- a/Foresome/Foresome/AfterLogin/CreatePoll/View/CreatePollViewController.xib
+++ b/Foresome/Foresome/AfterLogin/CreatePoll/View/CreatePollViewController.xib
@@ -27,6 +27,7 @@
                 <outlet property="optionsStackView" destination="pjH-Kf-X1g" id="Zwh-Zx-XY5"/>
                 <outlet property="secondOption" destination="fdY-oC-qAW" id="1VR-L4-unP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="yourQuestion" destination="J5G-Yf-SLz" id="pGm-oV-aia"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -84,10 +85,10 @@
                             <rect key="frame" x="0.0" y="0.0" width="393" height="718"/>
                             <subviews>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ctD-7q-cTg">
-                                    <rect key="frame" x="24" y="24" width="345" height="160"/>
+                                    <rect key="frame" x="24" y="24" width="345" height="30"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J5G-Yf-SLz" customClass="GrowingTextView" customModule="Foresome">
-                                            <rect key="frame" x="16" y="0.0" width="329" height="160"/>
+                                            <rect key="frame" x="16" y="0.0" width="329" height="30"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="textColor" systemColor="labelColor"/>
@@ -128,13 +129,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="pjH-Kf-X1g">
-                                    <rect key="frame" x="24" y="200" width="345" height="0.0"/>
+                                    <rect key="frame" x="24" y="70" width="345" height="0.0"/>
                                     <subviews>
                                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KI4-Pl-Ndl">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="65"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="32"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FoE-BR-AGK" customClass="GrowingTextView" customModule="Foresome" customModuleProvider="target">
-                                                    <rect key="frame" x="16" y="16" width="313" height="33"/>
+                                                    <rect key="frame" x="16" y="16" width="313" height="0.0"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="textColor" systemColor="labelColor"/>
@@ -174,10 +175,10 @@
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R2Z-YJ-dum">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="65"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="32"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fdY-oC-qAW" customClass="GrowingTextView" customModule="Foresome">
-                                                    <rect key="frame" x="16" y="16" width="313" height="33"/>
+                                                    <rect key="frame" x="16" y="16" width="313" height="0.0"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="textColor" systemColor="labelColor"/>
@@ -220,7 +221,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="gTA-K1-YEo">
-                                    <rect key="frame" x="24" y="219.99999999999997" width="345" height="86.666666666666657"/>
+                                    <rect key="frame" x="24" y="90" width="345" height="86.666666666666686"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jY7-wP-uSL">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="34"/>
